# aniinfo

./: .gitignore  pyproject.toml
aniinfo/: auth.py  db.sqlite3-shm  db.sqlite3-wal  main.py  router.py  settings.py
aniinfo/auth/: authentication.py  authorization.py
aniinfo/dto/: anime.py  genre.py  series.py  user.py
aniinfo/models/: __init__.py  anime.py  genre.py  series.py
aniinfo/routers/: router.py  system_router.py
aniinfo/services/: anime.py  common.py  genre.py
