[tool.poetry]
name = "aniinfo"
version = "0.1.0"
description = ""
authors = ["Igor4er <sherednihenko.ihor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
pydantic = "^1.10.10"
uvicorn = "^0.22.0"
transliterate = "^1.10.2"
python-jose = "^3.3.0"
cryptography = "^41.0.1"
python-dotenv = "^1.0.0"
tortoise = "^0.1.1"
tortoise-orm = "^0.19.3"
